# dc-days

DC1/: perfomance_analysis.xlsx  pthread_omp_comparison.xlsx  report.docx
DC1/DC1/: .gitignore  CMakeLists.txt  main.c
DC1/DC1/benchmark/: 10.txt  10k.txt  25k.txt  50k.txt
DC1/Visualization/: .gitignore  comets.csv  main.py  requirements.txt  satellite.csv
DC2/task_1/: 1_perfomance_analysis.xlsx  1_report.docx  CMakeLists.txt  README.md  main.c  run_debug.sh  run_release.sh
DC2/task_2/: 2_perfomance_analysis.xlsx  2_report.docx  CMakeLists.txt  main.c  run_debug.sh  run_release.sh
DC2/task_3/: 3_report.docx  CMakeLists.txt  README.md  main.cu
